@@ -3,7 +3,8 @@ include ChangeLog
 include COPYING
 include INSTALL
 include MANIFEST.in
-include runtime/pyclewn.vim
+include runtime/plugin/pyclewn.vim
+include runtime/autoload/pyclewn.vim
 include runtime/.pyclewn_keys.*
 include runtime/doc/pyclewn.txt
 include runtime/syntax/dbgvar.vim
